<?xml version="1.1" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">EasyMed</string>
    <string name="title" translatable="false">EasyMed</string>
    <string name="logo" translatable="false">EasyMed</string>
    <string name="img_context_1" translatable="false">menu_item</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="img_context_2" translatable="false">header_img</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
    <string name="field_error">Required Field</string>
    <string name="passwd_error">Passwords do not match</string>
    <string name="passwd_update">Password Updated</string>
    <string name="reminder_title">Reminder</string>
    <string name="confpasswd_field_error">Confirm Password</string>
    <string name="passwd_field_error">Password is required</string>
    <string name="email_field_error">Email is required</string>
    <string name="name_field_error">Name is required</string>
    <string name="email_verify">Verification Email Sent</string>
    <string name="del_acc_prompt">Delete account permanently?</string>
    <string name="conf_prompt">Are you sure?</string>
    <string name="ok" translatable="false">OK</string>
    <string name="acc_del">Account deleted</string>
    <string name="cancel">Cancel</string>
    <string name="email_update">Email updated</string>
    <string name="update">Update</string>
    <string name="update_email_prompt">Update Email?</string>
    <string name="email_input_prompt">Enter email address</string>
    <string name="easy_med_order">Order medicines</string>
    <string name="reset">Reset</string>
    <string name="reset_passwd">Forgot password</string>
    <string name="email_reset_passwd">Enter your email to get password reset link</string>
    <string name="reset_email_sent">Reset email sent</string>
    <string name="email_login_missing">Email is Missing</string>
    <string name="passwd_login_missing">Password is Missing</string>
    <string name="hospitals">Hospitals</string>
    <string name="find_doctors">Find Doctors</string>
    <string name="conf_passwd">Confirm Password</string>
    <string name="name">Name</string>
    <string name="verify_now_logout">Verify Now and Logout</string>
    <string name="sign_in_here">Already have an account? Sign in here</string>
    <string name="sign_up_here">Don\'t have an account yet? Sign up here</string>
    <string name="save">Save</string>
    <string name="img_context_3" translatable="false">Smartphone logo</string>
    <string name="verify_email_prompt">Please Verify your Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="del_acc">Delete account</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="profilename" translatable="false">profileName</string>
    <string name="email_address" translatable="false">emailAddress</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_field" translatable="false">phoneNumber</string>
    <string name="del_acc_error">Account deletion failed</string>
    <string name="del_acc_success">Account successfully deleted</string>
    <string name="cancel_action">Action cancelled</string>
    <string name="directions">Directions</string>
    <string name="checkout">Checkout</string>
    <string name="clear_kart">Clear</string>
    <string name="proceed">Proceed Purchase</string>
    <string name="kart">My Kart</string>
    <string name="mbway_error">There seems to be problems in the banking system. Please try again later.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="closest_hospital">Find Closest Hospital</string>
    <string name="find_me">Find Me!</string>
    <string name="repeat_off">No Repeat</string>
    <string name="edit_reminder_title">Edit Reminder</string>
    <string name="add_rem">Add Reminder Bubble</string>
    <string name="on">On</string>
    <string name="repeat_interval">Interval?</string>
    <string name="repeat_no">Number of repeats</string>
    <string name="repeat">Repeat</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="off">Off</string>
    <string name="add_reminder">Add a Reminder</string>
    <string name="repeat_img_context" translatable="false">repeat_img_context</string>
    <string name="alarm_state_img_context" translatable="false">alarm_state_img_context</string>
    <string name="alarm_face_img_context" translatable="false">alarm_face_img_context</string>
    <string name="discard_prompt">Discard changes?</string>
    <string name="delete_prompt">Delete?</string>
    <string name="doctor_info">Doctor Info</string>
</resources>