<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileActivity"
    android:background="@drawable/gradient">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/verifyEmailBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_now_logout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/verifyEmailMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_email_prompt"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="159dp"
        android:layout_height="135dp"
        android:layout_marginTop="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmailMsg"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pill" />

    <Button
        android:id="@+id/delete_account_menu"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/del_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.772" />

    <Button
        android:id="@+id/changeProfile"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/change_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.845" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="326dp"
        android:layout_height="39dp"
        android:layout_marginTop="69dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/profilename"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="325dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/email_address"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/profileNumber"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        app:layout_constraintVertical_bias="0.052" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="62dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        android:contentDescription="@string/img_context_3"
        app:srcCompat="@drawable/ic_baseline_phone_android_24"
        app:tint="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>