<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/add_reminder_layout_top"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="@color/primary"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:id="@+id/reminder_title"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:gravity="top|left"
            android:hint="@string/add_reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textSize="25sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_reminder_layout_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:text="@string/details"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:onClick="setDate">

                <ImageView
                    android:id="@+id/date_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:srcCompat="@drawable/calendar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/date_icon"
                    android:layout_toRightOf="@id/date_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setTime">

                <ImageView
                    android:id="@+id/time_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:srcCompat="@drawable/time" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/time_icon"
                    android:layout_toRightOf="@id/time_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/repeat"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <ImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:srcCompat="@drawable/repeat" />

                <LinearLayout
                    android:id="@+id/repeat_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_icon"
                    android:layout_toRightOf="@id/repeat_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:onClick="onSwitchRepeat"
                    android:textOff="Off"
                    android:textOn="On" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RepeatNo"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="setRepeatNo">

                <ImageView
                    android:id="@+id/repeat_no_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:srcCompat="@drawable/repeat_no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_no_icon"
                    android:layout_toRightOf="@id/repeat_no_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_no_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_no"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RepeatType"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="selectRepeatType">

                <ImageView
                    android:id="@+id/repeat_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    app:srcCompat="@drawable/interval" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/repeat_type_icon"
                    android:layout_toRightOf="@id/repeat_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repeat_type_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeat_interval"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/set_repeat_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_reminder_layout_top" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="selectFab1"
        app:backgroundTint="@color/accent"
        app:srcCompat="@drawable/notificate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="selectFab2"
        app:backgroundTint="@color/accent"
        app:srcCompat="@drawable/mute"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
